9.12.1.0:
	FIX: Crash when creating EnergyCart. (issue #820)

9.12.0.0:
	NEW: Added Perpetuum Locomotive, a Creative only Locomotive that doesn't require fuel of any kind. (contribution by Forecaster)
	FIX: Wrestle missing RF Unloader textures from the maws of Git, the beast.

9.11.0.0:
	NEW: Added Redstone Flux Cart + Loaders.
	NEW: Fancy tooltips for the Signal blocks/boxes.
	NEW: Added some new Admin commands for killing entities/carts.
	NEW: You can now label Block Signals in addition to Boxes.
	FIX: Fix right-click handling for fluid containers. (issue #776)
	FIX: Fix NPE when looking at Signal Boxes. (issue #793)
	FIX: Fixed excessive render refreshes when a Switch Controller touched two Switch Tracks. (issue #775)
	FIX: Hobbyist Engine should move empty buckets to the fluid output slot. (issue #804)
	

9.10.0.0:
    INFO: Repackage for release.

9.9.0.1:
	NEW: Added Auto-Coupler Mode to Coupler Track. Any cart that passes over this track will couple to the next cart it collides with. (contribution by Cream-tea)
	NEW: Add support for IC2 Classic. (contribution by Speiger)
	CHANGE: Reworked harvest tools for the entire mod. Tracks and related blocks are by default harvestable by the crowbar instead of pickaxes. Other blocks are either axe or pickaxe depending on material.
	FIX: Signals and Boxes now use a TESR for rendering the lights, resulting in less render refreshes. (contribution by Vexatos and Player)
	FIX: Fix OreDict tag in Tin Plate recipe. (issue #781)
	FIX: Fix issues with server/client sync of filtered Carts.
	FIX: Only cache Tile Entities located in the same chunk as the cache. Should resolve untold issues with Signals and Multi-Blocks.
	FIX: Improve High Speed explosion logic to take into account the comparison of Train objects. Might result in less unpredictable explosions.
	API: SignalBlock was moved to the API so that addons can create new Signal blocks.

9.9.0.0:
    INFO: Repackage for release.

9.8.0.3:
	FIX: Some API stuff for Vexatos.